# PythonTakeHomeTest-Merger

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: run_test.yaml
examples/: fileExampleA.txt  fileExampleB.txt  fileExampleC.txt  fileExampleE.txt  fileExampleF.txt  fileExampleG.txt
src/: __main__.py  diffcreator.py  filemerger.py  mergecontroller.py  types.py
tests/: test_diffcreator.py  test_filemerger.py  test_mergecontroller.py
