[tool.poetry]
name = "pythontesttask"
version = "0.1.0"
description = "Programming Test Task for the Python Language. A program to merge files."
authors = ["Martijn Wiekens <martijnwiekens@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
